deploy: b269a0d64399908cca6b673747d59babf5c0f9bb

--- a/genindex.html
+++ b/genindex.html
@@ -1685,6 +1685,8 @@
         <li><a href="api/core.html#stormpy.RationalFunction.is_constant">(RationalFunction method)</a>
 </li>
       </ul></li>
+      <li><a href="api/core.html#stormpy.PrismProgram.is_deterministic_model">is_deterministic_model() (PrismProgram property)</a>, <a href="api/storage.html#stormpy.storage.PrismProgram.is_deterministic_model">[1]</a>
+</li>
       <li><a href="api/gspn.html#stormpy.gspn.Transition.is_enabled">is_enabled() (Transition method)</a>
 </li>
       <li><a href="api/core.html#stormpy.Formula.is_eventually_formula">is_eventually_formula() (Formula property)</a>, <a href="api/logic.html#stormpy.logic.Formula.is_eventually_formula">[1]</a>
@@ -1728,8 +1730,6 @@
       <li><a href="api/core.html#stormpy.Expression.is_variable">is_variable() (Expression method)</a>, <a href="api/storage.html#stormpy.storage.Expression.is_variable">[1]</a>
 </li>
       <li><a href="api/dft.html#stormpy.dft.is_well_formed">is_well_formed() (in module stormpy.dft)</a>
-</li>
-      <li><a href="api/core.html#stormpy.PrismProgram.isDeterministicModel">isDeterministicModel() (PrismProgram property)</a>, <a href="api/storage.html#stormpy.storage.PrismProgram.isDeterministicModel">[1]</a>
 </li>
       <li><a href="api/core.html#stormpy.OperatorType.Ite">Ite (OperatorType attribute)</a>, <a href="api/storage.html#stormpy.storage.OperatorType.Ite">[1]</a>
 </li>
@@ -2470,12 +2470,16 @@
 </li>
       <li><a href="api/core.html#stormpy.Polynomial">Polynomial (class in stormpy)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/core.html#stormpy.FactorizedPolynomial.polynomial">polynomial() (FactorizedPolynomial method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/core.html#stormpy.ModelType.POMDP">POMDP (ModelType attribute)</a>, <a href="api/pars.html#stormpy.pars.ModelType.POMDP">[1]</a>, <a href="api/storage.html#stormpy.storage.ModelType.POMDP">[2]</a>
+
+      <ul>
+        <li><a href="api/core.html#stormpy.PrismModelType.POMDP">(PrismModelType attribute)</a>, <a href="api/storage.html#stormpy.storage.PrismModelType.POMDP">[1]</a>
 </li>
+      </ul></li>
       <li><a href="api/utility.html#stormpy.utility.SmtSolver.pop">pop() (SmtSolver method)</a>
 </li>
       <li><a href="api/core.html#stormpy.OperatorType.Power">Power (OperatorType attribute)</a>, <a href="api/storage.html#stormpy.storage.OperatorType.Power">[1]</a>
